@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgrepotool,v 1.7 2007/05/24 16:33:36 mej Exp $
+# $Id: pkgrepotool,v 1.8 2007/05/24 20:37:41 mej Exp $
 #
 
 use strict;
@@ -34,6 +34,7 @@ use Mezzanine::Util;
 use Mezzanine::Config;
 use Mezzanine::PkgVars;
 use Mezzanine::Pkg;
+use Mezzanine::PkgRepo;
 use Mezzanine::RPM;
 
 # Configuration data.
@@ -63,7 +64,6 @@ print_usage_info
     print "    -a --add                         Add package(s) to one or more repos\n";
     print "    -r --remove --rm                 Remove package(s) from one or more repos\n";
     print "    -c --compare                     Compare repos\n";
-    print "    -m --merge                       Merge packages from one repo into others\n";
     print "    -C --closure                     Verify repository dependency closure\n";
     print "    -i --interactive                 Prompt before taking action\n";
     print "    -t --test                        Test only; do not take action\n";
@@ -79,278 +79,6 @@ print_usage_info
     print "       --savecfg                     Preserve current settings for future use\n";
     print "\n";
     exit(MEZZANINE_SUCCESS);
-}
-
-# Return the newest RPM in a list, or the list sorted newest -> oldest
-sub
-get_newest(@)
-{
-    my @rpms = @_;
-
-    @rpms = reverse(&rpm_sort(@rpms));
-    return ((wantarray()) ? (@rpms) : ($rpms[0]));
-}
-
-# Return the oldest RPM in a list, or the list sorted oldest -> newest
-sub
-get_oldest(@)
-{
-    my @rpms = @_;
-
-    @rpms = &rpm_sort(@rpms);
-    return ((wantarray()) ? (@rpms) : ($rpms[0]));
-}
-
-# Build hash of package name -> array of RPM's
-sub
-build_package_hash($)
-{
-    my $scan = $_[0];
-    my $pkgs;
-
-    foreach my $dir (sort(keys(%{$scan}))) {
-        foreach my $pkg (sort(keys(%{$scan->{$dir}}))) {
-            # pkgs->{DIR}{NAME} is a list of filenames
-            push @{$pkgs->{$dir}{$scan->{$dir}{$pkg}{"NAME"}}}, $pkg;
-        }
-    }
-    return $pkgs;
-}
-
-# Get only the newest packages from the complete scan list.
-sub
-filter_newest($)
-{
-    my $scan = $_[0];
-    my $pkgs;
-
-    $pkgs = &build_package_hash($scan);
-
-    # For each unique package, keep only the newest one.
-    foreach my $dir (sort(keys(%{$pkgs}))) {
-        foreach my $pkg (sort(keys(%{$pkgs->{$dir}}))) {
-            my @rpms = &get_newest(@{$pkgs->{$dir}{$pkg}});
-
-            shift @rpms;
-            foreach my $rpm (@rpms) {
-                delete $scan->{$dir}{$rpm};
-            }
-        }
-    }
-    return $scan;
-}
-
-# Get only the oldest packages from the complete scan list.
-sub
-filter_oldest($)
-{
-    my $scan = $_[0];
-    my $pkgs;
-
-    $pkgs = &build_package_hash($scan);
-
-    # For each unique package, keep only the oldest one.
-    foreach my $dir (sort(keys(%{$pkgs}))) {
-        foreach my $pkg (sort(keys(%{$pkgs->{$dir}}))) {
-            my @rpms = &get_oldest(@{$pkgs->{$dir}{$pkg}});
-
-            shift @rpms;
-            foreach my $rpm (@rpms) {
-                delete $scan->{$dir}{$rpm};
-            }
-        }
-    }
-    return $scan;
-}
-
-# Get only old packages in the scan list (exact opposite of newest).
-sub
-filter_old($)
-{
-    my $scan = $_[0];
-    my $pkgs;
-
-    $pkgs = &build_package_hash($scan);
-
-    # For each unique package, pick only the old one.
-    foreach my $dir (sort(keys(%{$pkgs}))) {
-        foreach my $pkg (sort(keys(%{$pkgs->{$dir}}))) {
-            my @rpms = &get_newest(@{$pkgs->{$dir}{$pkg}});
-            my $newest_rpm = shift @rpms;
-
-            delete $scan->{$dir}{$newest_rpm};
-        }
-    }
-    return $scan;
-}
-
-# Merge all repositories into one
-sub
-span_dirs($)
-{
-    my $scan = $_[0];
-
-    foreach my $dir (keys(%{$scan})) {
-        foreach my $pkg (keys(%{$scan->{$dir}})) {
-            $scan->{'-'}{$pkg} = $scan->{$dir}{$pkg};
-        }
-        delete $scan->{$dir};
-    }
-    return $scan;
-}
-
-# Display differences between two repositories
-sub
-compare_dirs($$)
-{
-    my ($pkgs1, $pkgs2) = @_;
-    my (@pkgs1, @pkgs2, @results);
-    my ($i, $j);
-
-    # Create sorted arrays of package names
-    @pkgs1 = sort(keys(%{$pkgs1}));
-    @pkgs2 = sort(keys(%{$pkgs2}));
-
-    dprintf("Comparing %d packages from master dir with %d packages from slave dir.\n",
-            scalar(@pkgs1), scalar(@pkgs2));
-    for (($i, $j) = (0, 0); ($i < scalar(@pkgs1)) && ($j < scalar(@pkgs2)); ) {
-        my $c = $pkgs1[$i] cmp $pkgs2[$j];
-
-        dprintf("Comparing %s (%d) vs. %s (%d):  $c\n", $pkgs1[$i], $i, $pkgs2[$j], $j);
-        if ($c < 0) {
-            push @results, [ '<<', $pkgs1[$i] ];
-            $i++;
-        } elsif ($c > 0) {
-            push @results, [ '>>', $pkgs2[$j] ];
-            $j++;
-        } else {
-            # For packages that both dirs contain, compare the RPM sets.
-            if (! $config->get("DIFFONLY")) {
-                push @results, [ '==', $pkgs1[$i] ];
-            }
-            push @results, &compare_package_sets($pkgs1->{$pkgs1[$i]}, $pkgs2->{$pkgs2[$j]});
-            $i++, $j++;
-        }
-    }
-    # Handle any leftovers.
-    while ($i < scalar(@pkgs1)) {
-        push @results, [ '<<', $pkgs1[$i] ];
-        $i++;
-    }
-    while ($j < scalar(@pkgs2)) {
-        push @results, [ '>>', $pkgs2[$j] ];
-        $j++;
-    }
-    return @results;
-}
-
-# Display differences between two sets of a given package
-sub
-compare_package_sets($$)
-{
-    my ($pkgs1, $pkgs2) = @_;
-    my (@pkgs1, @pkgs2, @results);
-    my ($i, $j);
-
-    # Create sorted arrays of RPM packages.
-    @pkgs1 = map { &basename($_) } &rpm_sort(@{$pkgs1});
-    @pkgs2 = map { &basename($_) } &rpm_sort(@{$pkgs2});
-
-    dprintf("Comparing %d package files from master dir with %d package files from slave dir.\n",
-            scalar(@pkgs1), scalar(@pkgs2));
-    for ($i = 0, $j = 0; ($i < scalar(@pkgs1)) && ($j < scalar(@pkgs2)); ) {
-        my $c = &rpm_cmp($pkgs1[$i], $pkgs2[$j]);
-
-        dprintf("Comparing %s (%d) vs. %s (%d):  $c\n", $pkgs1[$i], $i, $pkgs2[$j], $j);
-        if ($c < 0) {
-            push @results, [ '<', $pkgs1[$i] ];
-            $i++;
-        } elsif ($c > 0) {
-            push @results, [ '>', $pkgs2[$j] ];
-            $j++;
-        } else {
-            if (! $config->get("DIFFONLY")) {
-                push @results, [ '=', $pkgs1[$i] ];
-            }
-            $i++, $j++;
-        }
-    }
-    # Handle any leftovers.
-    while ($i < scalar(@pkgs1)) {
-        push @results, [ '<', $pkgs1[$i] ];
-        $i++;
-    }
-    while ($j < scalar(@pkgs2)) {
-        push @results, [ '>', $pkgs2[$j] ];
-        $j++;
-    }
-    return @results;
-}
-
-# Merge packages from master repository (#1) to slave repository (#2)
-sub
-merge_dirs($$$)
-{
-    my ($pkgs, $master, $slave) = @_;
-    my (@comparison);
-
-    @comparison = &compare_dirs($pkgs->{$master}, $pkgs->{$slave});
-
-    for (my $i = 0; $i < scalar(@comparison); ) {
-        my ($status, $pkg) = @{$comparison[$i]}[(0, 1)];
-
-        dprint "$status $pkg\n";
-        if ($status eq "<<") {
-            # Package only exists in master.  Merge to slave.
-            &merge_package_all($pkg, $pkgs->{$master}{$pkg}, $master, $slave);
-            $i++;
-        } elsif ($status eq "==") {
-            my @set_comparison;
-
-            # Package exists in both master and slave.  Check individual package files.
-            for ($i++; length($comparison[$i][0]) == 1; $i++) {
-                push @set_comparison, $comparison[$i];
-            }
-            if (!scalar(grep { $_->[0] eq '<' } @set_comparison)) {
-                # All package files match too.  Next!
-                next;
-            }
-            # If we get here, master has some files slave lacks.  Merge.
-            &merge_package_set(\@set_comparison, $master, $slave);
-        }
-    }
-}
-
-# Merge an entire package set that only the master repo has
-sub
-merge_package_all($$$)
-{
-    my ($pkg, $pkgs, $master, $slave) = @_;
-    my @pkgs = @{$pkgs};
-
-    print "Merging $pkg into $slave:\n";
-    print map { "    $_\n" } @pkgs;
-    if ($config->get("INTERACTIVE")) {
-
-    } else {
-
-    }
-}
-
-# Merge a package set from master to slave where some files may already match.
-sub
-merge_package_set($$$)
-{
-
-}
-
-# Copy a single package file from the master to the slave repo
-sub
-merge_single_package($$$)
-{
-    my ($pkg, $master, $slave) = @_;
-
-    dprint "Merging package $pkg from $master into $slave\n";
 }
 
 # main() here is basically the same as main() in C
@@ -372,14 +100,14 @@ main
 
     $err = 0;
     &mezz_init("pkgrepotool", "1.0", "help|h", "version|v", "debug|d!", "savecfg|save-config!",
-               "scan|s", "closure|C", "add|a", "remove|rm|r", "compare|c", "merge|m",
+               "scan|s", "closure|C", "add|a", "remove|rm|r", "compare|c",
                "newest", "old", "oldest", "interactive|i!", "test|t!", "scm|S!", "span!", "diffonly|do!",
                "dirs|directories|D=s@", "metadata|M=s@");
 
     if ($OPTION{"version"}) {
         # Do not edit this.  It is updated automatically by CVS when you commit.
         &print_version($PROGNAME, $VERSION, "Michael Jennings",
-                       'CVS Revision $Revision: 1.7 $ created on $Date: 2007/05/24 16:33:36 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.8 $ created on $Date: 2007/05/24 20:37:41 $ by $Author: mej $ ');
     } elsif ($OPTION{"help"} || (!scalar(@ARGV) && !scalar(%OPTION) && &basename($0) !~ /^mz/)) {
         &print_usage_info();
     }
@@ -405,8 +133,6 @@ main
         $mode = "closure";
     } elsif (($0 =~ /(compare|comp|cmp|diff)$/) || ($OPTION{"compare"})) {
         $mode = "compare";
-    } elsif (($0 =~ /merge$/) || ($OPTION{"merge"})) {
-        $mode = "merge";
     } elsif (($0 =~ /add$/) || ($OPTION{"add"})) {
         $mode = "add";
     } elsif (($0 =~ /(rm|remove)$/) || ($OPTION{"remove"})) {
@@ -431,7 +157,7 @@ main
         $config->save();
     }
 
-    if ($mode =~ /^(scan|closure|compare|merge|add|remove)$/) {
+    if ($mode =~ /^(scan|closure|compare|add|remove)$/) {
         $scan = &rpm_scan_files(@dirlist);
         if ($config->get("SPAN")) {
             &span_dirs($scan);
@@ -447,7 +173,7 @@ main
     }
 
     # Check for directory list stupidity
-    if ($mode eq "compare" || $mode eq "merge") {
+    if ($mode eq "compare") {
         if (scalar(@dirlist) <= 1) {
             if ($config->get("SPAN")) {
                 eprint "Cannot use SPAN and $mode together.\n";
@@ -477,19 +203,6 @@ main
             #dprint &examine_object(\@results);
             print "*** Comparing $maindir with $dir\n";
             print map { "$_->[0] $_->[1]\n" } @results;
-        }
-    } elsif ($mode eq "merge") {
-        my $pkgs;
-        my $maindir = shift @dirlist;
-
-        $pkgs = &build_package_hash($scan);
-        foreach my $dir (@dirlist) {
-            if ($dir =~ /^(ht|f)tps?:\/\//) {
-                eprint "Unable to merge into remote repository.  Skipping $dir\n";
-            } else {
-                print "*** Merging $maindir with $dir\n";
-                &merge_dirs($pkgs, $maindir, $dir);
-            }
         }
     } elsif ($mode eq "add") {
     } elsif ($mode eq "remove") {
